--- a/src/pages/details/details-content-image.css
+++ b/src/pages/details/details-content-image.css
@@ -22,7 +22,18 @@ main {
         flex-direction: column;
 
         .section-image {
+          max-height: 150px;
+          max-width: 90px;
+          width: auto;
           padding: 10px;
+
+          cursor: pointer;
+          transition: transform 0.3s ease, filter 0.3s ease;
+
+          &:hover {
+            transform: scale(1.1);
+            filter: brightness(0.9);
+          }
         }
       }
 
@@ -35,11 +46,9 @@ main {
 
         .section-image {
           border-radius: 10px;
-          /* padding: 20px; */
-          width: 100%;
-          /* height: 490px;
-          max-height: 568.4px; */
+          max-height: 700px;
           object-fit: cover;
+
         }
 
         .section-shopping {
