--- a/src/pages/details/details-content-image.css
+++ b/src/pages/details/details-content-image.css
@@ -45,8 +45,10 @@ main {
         width: 100%;
 
         .section-image {
+          width: 100% ;
           border-radius: 10px;
           max-height: 700px;
+          min-height: 300px;
           object-fit: cover;
 
         }
@@ -91,8 +93,10 @@ main {
           flex-direction: column-reverse;
 
           .section-image {
-            width: 100%;
+            max-height: 600px;
+            width: 100%; 
             padding: 10px;
+            object-fit: contain;
           }
         }
       }
