--- a/src/pages/details/details-content-comments.css
+++ b/src/pages/details/details-content-comments.css
@@ -121,7 +121,6 @@
     .sections-publicComents {
         max-height: 500px;
         overflow: auto;
-        background-color: green;
         grid-area: PublicComments;
 
         padding: 10px;
@@ -137,6 +136,7 @@
                 display: flex;
                 flex-direction: column;
 
+                padding: 0 20px;
                 .userComment {
                     color: var(--text-accent-color);
                     font-weight: bold;
