refactor:Styles de las estrellas

--- a/src/pages/details/details-content-image.css
+++ b/src/pages/details/details-content-image.css
@@ -167,10 +167,6 @@ main {
   transition: color 200ms ease-in-out;
 }
 
-.rating .star.selected{
+.rating .star.selected, .star.active{
   color: var(--secondary-color);
-}
-
-.rating .star.active {
-  color: var(--secondary-color); /* Color de las estrellas activas */
 }
