--- a/src/pages/carrito/style.css
+++ b/src/pages/carrito/style.css
@@ -1,72 +1,72 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap');
+
 :root {
-    --bg-color: #F2F5F7;
-    --primary-color: #0E0F10;
-    --secondary-color: #FADE3C;
-    --bg-skeleton-color: #D9D9D9;
-    --primary-border-color: #878787;
-    --secondary-border-color: #000000;
-    --text-color: #000000;
-    --text-color-revert: #F2F5F7;
-    --text-accent-color: #868686;
+  --bg-color: #F2F5F7;
+  --primary-color: #0E0F10;
+  --secondary-color: #FADE3C;
+  --bg-skeleton-color: #D9D9D9;
+  --primary-border-color: #878787;
+  --secondary-border-color: #000000;
+  --text-color: #000000;
+  --text-color-revert: #F2F5F7;
+  --text-accent-color: #868686;
 }
 
 
-body{
-    height: 100dvh !important;
-  }
-  
-  .banner-container {
-    width: 100%;
-    overflow: hidden;
-    height: 250px;
-    border-radius: 0 !important;
-    position: relative;
-    perspective: 1px;
-  }
-  
-  .banner-bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-  }
-  
-  .banner-bg img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    transform: translateZ(-1px) scale(2.2);
-    filter: brightness(0.45) !important;
-  }
-  
-  .banner-content {
-    position: relative;
-    z-index: 2;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .banner-content img {
-    max-width: 100%;
-    height: 53px;
-    z-index: 2;
-  }
-  
-s
-.mi-carrito-container {
+body {
+  height: 100dvh !important;
+}
+
+.banner-container {
+  width: 100%;
+  overflow: hidden;
+  height: 250px;
+  border-radius: 0 !important;
+  position: relative;
+  perspective: 1px;
+}
+
+.banner-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+}
+
+.banner-bg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transform: translateZ(-1px) scale(2.2);
+  filter: brightness(0.45) !important;
+}
+
+.banner-content {
+  position: relative;
+  z-index: 2;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-content img {
+  max-width: 100%;
+  height: 53px;
+  z-index: 2;
+}
+
+s .mi-carrito-container {
   padding: 50px;
   display: flex;
   flex-direction: row;
@@ -90,106 +90,113 @@ s
   justify-content: center;
   -webkit-text-stroke: 1px #000000;
 }
-p{
+
+p {
   text-align: center;
 }
 
 /* Contenedor principal */
 .contenedor-principal {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    align-items: center;
-    gap: 20px; 
-    padding: 5px;
-    width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  gap: 20px;
+  padding: 5px;
+  width: 100%;
 }
 
-#cart-items-container{
+#cart-items-container {
   display: flex;
   flex-direction: column;
-  gap: 20px; 
+  gap: 20px;
   padding: 5px;
-  margin-top:2px;
-  margin-bottom:50px;
-  margin-left:50px;
- 
+  margin-top: 2px;
+  margin-bottom: 50px;
+  margin-left: 50px;
+
 }
 
 /* Estilo del contenedor de producto */
 .producto-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    margin-right: 100px;
-   
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 100px;
+
 }
 
 /* Estilo para la sección de cantidad */
 .cantidad-container {
-    display: flex;
-    align-items: center;
-    justify-content:center; 
-}
-.tcantidad-container{
   display: flex;
   align-items: center;
-  justify-content:center; 
+  justify-content: center;
+}
+
+.tcantidad-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-left: 40px;
 }
+
 /* Estilo para la sección de total */
 .total-container {
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 
-.producto, .cantidad, .total {
-    color: var(--text-color);
-    font-family: "Poppins-Bold", sans-serif;
-    font-size: clamp(16px, 2vw, 12px);
-    line-height: 1.2; 
-    font-weight: 700;
+.producto,
+.cantidad,
+.total {
+  color: var(--text-color);
+  font-family: "Poppins-Bold", sans-serif;
+  font-size: clamp(16px, 2vw, 12px);
+  line-height: 1.2;
+  font-weight: 700;
 }
 
 
 .producto {
-    margin-left: 100px; 
+  margin-left: 100px;
 }
 
 .cantidad {
-    margin-right: 15px; 
+  margin-right: 15px;
 }
 
-.total{
-    margin-right: 100px; 
+.total {
+  margin-right: 100px;
 }
 
 .producto-cart {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr ; 
-  grid-gap: 10px; 
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-gap: 10px;
   align-items: center;
   padding: 10px;
   border: 2px;
   text-align: center;
 }
+
 .producto-info {
   display: flex;
   flex-direction: column;
   gap: 5px;
- 
+
 }
 
 .cart-item-image {
   width: 200px;
-  height: 200px; 
+  height: 200px;
   border-radius: 4px;
-  object-fit: contain; 
+  object-fit: contain;
   margin: 0 auto;
- 
+
 }
+
 .producto-cart img {
   max-width: 300px;
   max-height: 300px;
@@ -197,21 +204,21 @@ p{
 }
 
 .producto-name {
- 
-  font-size: clamp(14px, 2vw, 16px); 
-  color: var(--text-color); 
-  font-family: "Poppins-Bold", sans-serif;
-  font-weight: 600; 
 
- 
+  font-size: clamp(14px, 2vw, 16px);
+  color: var(--text-color);
+  font-family: "Poppins-Bold", sans-serif;
+  font-weight: 600;
+
+
 }
 
 .product-price {
   color: var(--secondary-color);
   font-size: 14px;
-  
- 
- 
+
+
+
 }
 
 .quantity-button {
@@ -224,95 +231,99 @@ p{
   font-weight: bold;
   cursor: pointer;
   display: flex;
-  align-items: center; 
+  align-items: center;
   justify-content: center;
 
 }
+
 .cart-item-quantity {
   width: 40px;
   text-align: center;
-  color: var( --primary-color);
+  color: var(--primary-color);
   font-size: 17px;
- 
+
 }
 
 
 .cart-item-total {
   text-align: left;
-  font-size: clamp(14px, 5vw, 24px); 
+  font-size: clamp(14px, 5vw, 24px);
   font-weight: bold;
   color: var(--primary-color);
   margin-right: 10px;
   margin-left: 50px;
   flex-grow: 1;
 
- 
- 
+
+
 }
 
 .delete-button {
   width: 25px;
-    height: 25px;
-    background-color: transparent; 
-    border-radius: 50%; 
-    color: var( --primary-color); 
-    font-size: clamp(14px, 2vw, 16px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    margin-right: 30px;
+  height: 25px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 2px solid black;
+  color: var(--primary-color);
+  font-size: clamp(14px, 2vw, 16px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-right: 30px;
 }
 
 
 
 /* Línea divisoria */
-.line-1, .line-2 {
+.line-1,
+.line-2 {
   margin-top: 1px;
   border-style: solid;
   border-color: var(--yellow, #fade3c);
   border-width: 5px 0 0 0;
-  width: 90%; 
+  width: 90%;
   height: 0;
   position: relative;
-  left: 5%; 
+  left: 5%;
   display: flex;
   flex-direction: column;
 }
 
 .subtotal-container {
   display: flex;
-  justify-content: flex-end; 
-  gap: 10px; 
-  width: 90%; 
-  margin: 20px auto 0 auto; 
-  font-size: clamp(14px, 2vw, 16px); 
+  justify-content: flex-end;
+  gap: 10px;
+  width: 90%;
+  margin: 20px auto 0 auto;
+  font-size: clamp(14px, 2vw, 16px);
   color: var(--text-color);
   font-family: "Poppins-Bold", sans-serif;
-  padding-right: 10px; 
+  padding-right: 10px;
 }
 
 #subtotal-amount {
   font-weight: bold;
-  color: var(--primary-color); 
+  color: var(--primary-color);
 }
 
 /* Contenedor de los botones */
 .button-container {
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
   width: 90%;
   margin: 20px auto 0 auto;
-  padding-bottom:50px; 
+  padding-bottom: 50px;
   gap: 10px;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
 }
 
 /* Estilo de los botones */
-.vaciar-carrito-button, .pago-button {
+.vaciar-carrito-button,
+.pago-button {
   padding: 12px 24px;
-  font-size: clamp(16px, 1vw, 20px); 
+  font-size: clamp(16px, 1vw, 20px);
   font-weight: bold;
   font-family: "Poppins", sans-serif;
   border: none;
@@ -333,7 +344,8 @@ p{
   color: var(--text-color-revert);
 }
 
-.vaciar-carrito-button:hover, .pago-button:hover {
+.vaciar-carrito-button:hover,
+.pago-button:hover {
   transform: scale(1.05);
 }
 
@@ -345,75 +357,82 @@ p{
   .producto-container {
     display: flex;
     flex-direction: column;
-    align-items: center; 
-    justify-content: center; 
-    margin-right: 0; 
-    margin-left: auto; 
-    margin-right: 100px; 
-    width: 100%; /
+    align-items: center;
+    justify-content: center;
+    margin-right: 0;
+    margin-left: auto;
+    margin-right: 100px;
+    width: 100%;/
   }
+
   #cart-items-container {
-    margin: 0 auto; 
-    width: 100%; 
+    margin: 0 auto;
+    width: 100%;
     display: flex;
-    justify-content: center; 
-    padding: 10px; 
+    justify-content: center;
+    padding: 10px;
   }
-  
+
 
   .producto-cart {
-      grid-template-columns: 1fr;
-      text-align: center;
+    grid-template-columns: 1fr;
+    text-align: center;
   }
 
- 
-  .cantidad, .total {
-      display: none;
+
+  .cantidad,
+  .total {
+    display: none;
   }
 
-  
-  .cantidad-container, .total-container {
+
+  .cantidad-container,
+  .total-container {
     justify-content: center;
   }
 
   .total-container {
-    text-align: center; 
-     
+    text-align: center;
+
   }
 
   .delete-button {
-      position: absolute;
-      right: 10px;
-      top: 10px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
   }
-  .cart-item-total{
-      margin-left: 5px; 
-      font-size: clamp(12px, 4vw, 20px); 
-    
-  
-   
+
+  .cart-item-total {
+    margin-left: 5px;
+    font-size: clamp(12px, 4vw, 20px);
+
+
+
   }
 }
 
 @media (max-width: 480px) {
   .producto-info {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
-  .producto-name, .product-price {
-      margin-left: 0;
-      text-align: center;
+  .producto-name,
+  .product-price {
+    margin-left: 0;
+    text-align: center;
   }
-  .cart-item-total{
-  
+
+  .cart-item-total {
+
     font-size: 16px;
     margin-left: 50px;
-    margin-right:50px;
-    text-align:center;
-  
+    margin-right: 50px;
+    text-align: center;
+
+  }
 }
-}
+
 /*Estilos para los sweet alert*/
 /*Botón de success*/
 div:where(.swal2-icon).swal2-success.custom-sweetAlert-icon [class^=swal2-success-line] {
@@ -434,5 +453,3 @@ div:where(.swal2-icon).swal2-success.custom-sweetAlert-icon [class^=swal2-succes
   border: 7px solid var(--primary-color);
   max-width: 400px;
 }
-
-
