--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -813,7 +813,7 @@ dialog[open] {
   padding: 5%;
 }
 
-.hero-banner {
+/* .hero-banner {
 
   display: flex;
   flex-direction: row;
@@ -835,6 +835,33 @@ dialog[open] {
   .hero-banner-logo {
     img {
       width: 450px;
+    }
+  }
+} */
+
+.hero-banner {
+  position: relative;
+  overflow: hidden;
+  height: 500px;
+
+  .hero-banner-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    opacity: 0.5;
+  }
+
+  .hero-banner-content {
+    position: relative;
+    z-index: 1;
+
+    .hero-banner-title {
+      font-size: 80px;
+      font-weight: 600;
     }
   }
 }
@@ -999,6 +1026,7 @@ dialog[open] {
     grid-template-areas:
       "name surname"
       "email email"
+      "terms terms"
       "submit submit";
     gap: 10px;
   }
@@ -1027,7 +1055,12 @@ dialog[open] {
     grid-area: email;
   }
 
-  button[type="submit"] {
+  .form-group.terms {
+    grid-area: terms;
+    flex-direction: row;
+  }
+
+  button {
     grid-area: submit;
   }
 }
@@ -1151,4 +1184,38 @@ footer {
     text-align: center;
   }
 
+}
+
+/*Mobile*/
+@media (width <=767px) {
+
+  .hero-banner {
+    height: 250px;
+
+    .hero-banner-content {
+        margin-top: 50px;
+    }
+  }
+
+  .why-to-buy-card {
+    width: calc(100dvw - 30px);
+  }
+
+  .fav-products-title, .fav-products-caption{
+    width: calc(100dvw - 40px);
+    word-wrap: break-word;
+  }
+
+  .appear-favs-content{
+    width: calc(100dvw - 40px);
+  }
+
+  .newsletter-form {
+    grid-template-areas:
+      "name"
+      "surname"
+      "email"
+      "terms"
+      "submit" !important;
+  }
 }
