--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -38,8 +38,9 @@ h2{
 
 /*Parte de los miembros del equipo*/
 .members-container{/*Contenedor*/
+  margin-top: 20px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(calc(100% / 5 - 10px), 1fr));
   gap: 10px;
 }
 
