--- a/src/pages/details/details-content-info.css
+++ b/src/pages/details/details-content-info.css
@@ -52,6 +52,7 @@
                 margin-top: 10px;
                 padding: 20px;
                 width: 100%;
+                cursor: pointer;
             }
 
             .buttons-actions {
